--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 
 	<title>the team fortress 2 console status steam profile link grabber</title>
 
-	<link rel='icon' type='image/png' href='/tf2cssplg/favicon.png'>
-	<link rel='stylesheet' href='/tf2cssplg/global.css'>
-	<link rel='stylesheet' href='/tf2cssplg/build/bundle.css'>
+	<link rel='icon' type='image/png' href='./favicon.png'>
+	<link rel='stylesheet' href='./global.css'>
+	<link rel='stylesheet' href='./build/bundle.css'>
 
-	<script defer src='/tf2cssplg/build/bundle.js'></script>
+	<script defer src='./build/bundle.js'></script>
 </head>
 
 <body>
