--- a/index.html
+++ b/index.html
@@ -1,18 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset='utf-8'>
-	<meta name='viewport' content='width=device-width,initial-scale=1'>
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="./favicon.png" />
+		<link rel='stylesheet' href='./global.css'>
+		<meta name="viewport" content="width=device-width" />
 
-	<title>the team fortress 2 console status steam profile link grabber</title>
+		<meta http-equiv="content-security-policy" content="">
+		<link href="./_app/immutable/assets/_page.0da0554f.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.12553131.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.8a750992.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.d59a704f.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.0ac0f041.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.706c3f63.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/layout.svelte.7d7ec113.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.js.984db11e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.65840d29.js"><title>tf2cssplg2</title><!-- HEAD_svelte-6k0x73_START --><!-- HEAD_svelte-6k0x73_END -->
+	</head>
+	<body data-sveltekit-preload-data="hover">
+		<div style="display: contents">
 
-	<link rel='icon' type='image/png' href='./favicon.png'>
-	<link rel='stylesheet' href='./global.css'>
-	<link rel='stylesheet' href='./build/bundle.css'>
 
-	<script defer src='./build/bundle.js'></script>
-</head>
 
-<body>
-</body>
+
+
+
+<div class="container svelte-1kjyvdl"><div class="form-container svelte-1emawi6"><form class="svelte-1emawi6"><h1>dump your console output here</h1>
+    <textarea class="input svelte-1emawi6" spellcheck="false"></textarea>
+    <div class="button-container svelte-1emawi6"><a href="/examples" class="examples-link svelte-1emawi6">See examples</a>
+      <button class="button button-submit svelte-1emawi6" type="submit">Submit</button></div></form>
+</div>
+<div class="table-container svelte-1ftbug4"><table class="svelte-1ftbug4"><thead><tr class="svelte-1ftbug4"><th class="sorted-asc svelte-1ftbug4">Name</th>
+        <th class=" svelte-1ftbug4">Ping</th>
+        <th class=" svelte-1ftbug4">ID3</th>
+        <th class=" svelte-1ftbug4">URL</th></tr></thead>
+    <tbody></tbody></table>
+</div>
+</div>
+
+
+			
+			<script>
+				{
+					__sveltekit_3857qx = {
+						base: new URL(".", location).pathname.slice(0, -1),
+						env: {}
+					};
+
+					const element = document.currentScript.parentElement;
+
+					const data = [null,null];
+
+					Promise.all([
+						import("./_app/immutable/entry/start.12553131.js"),
+						import("./_app/immutable/entry/app.706c3f63.js")
+					]).then(([kit, app]) => {
+						kit.start(app, element, {
+							node_ids: [0, 2],
+							data,
+							form: null,
+							error: null
+						});
+					});
+				}
+			</script>
+		</div>
+	</body>
 </html>
