--- a/src/app.html
+++ b/src/app.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<link rel='stylesheet' href='%sveltekit.assets%/global.css'>
 		<meta name="viewport" content="width=device-width" />
 
 		%sveltekit.head%
