--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="./favicon.png" />
-		<link rel='stylesheet' href='./global.css'>
 		<meta name="viewport" content="width=device-width" />
 
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_page.0da0554f.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.12553131.js">
+		<link href="./_app/immutable/assets/_layout.8981e8ed.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_page.68eac764.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.bff47e20.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.8a750992.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.d59a704f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.0ac0f041.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.706c3f63.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/layout.svelte.7d7ec113.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.4222442f.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.1b659909.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.593b1e57.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.ff365516.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.js.984db11e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.65840d29.js"><title>tf2cssplg2</title><!-- HEAD_svelte-6k0x73_START --><!-- HEAD_svelte-6k0x73_END -->
+		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.023f2d5d.js"><title>tf2cssplg2</title><!-- HEAD_svelte-6k0x73_START --><!-- HEAD_svelte-6k0x73_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -26,24 +26,22 @@
 
 
 
-<div class="container svelte-1kjyvdl"><div class="form-container svelte-1emawi6"><form class="svelte-1emawi6"><h1>dump your console output here</h1>
-    <textarea class="input svelte-1emawi6" spellcheck="false"></textarea>
-    <div class="button-container svelte-1emawi6"><a href="/examples" class="examples-link svelte-1emawi6">See examples</a>
-      <button class="button button-submit svelte-1emawi6" type="submit">Submit</button></div></form>
-</div>
-<div class="table-container svelte-1ftbug4"><table class="svelte-1ftbug4"><thead><tr class="svelte-1ftbug4"><th class="sorted-asc svelte-1ftbug4">Name</th>
-        <th class=" svelte-1ftbug4">Ping</th>
-        <th class=" svelte-1ftbug4">ID3</th>
-        <th class=" svelte-1ftbug4">URL</th></tr></thead>
+<div class="flex flex-row justify-between items-start w-full"><div class="w-4/5 h-[100vh]"><form class="flex flex-col items-center w-full h-full p-6 space-y-4"><h1>dump your console output here</h1>
+    <textarea class="textarea p-3 h-full w-full resize-none font-mono" rows="24" spellcheck="false"></textarea>
+    <div class="w-full flex justify-between"><a href="/examples" class="h-fit">See examples</a>
+      <button class="btn btn-lg variant-filled-primary" type="submit">Submit</button></div></form></div>
+  <div class="table-container"><table class="table table-hover table-compact"><thead><tr><th class="sorted-asc svelte-1p69jcq">Name</th>
+        <th class=" svelte-1p69jcq">Ping</th>
+        <th class=" svelte-1p69jcq">ID3</th>
+        <th class=" svelte-1p69jcq">URL</th></tr></thead>
     <tbody></tbody></table>
-</div>
-</div>
+</div></div>
 
 
 			
 			<script>
 				{
-					__sveltekit_3857qx = {
+					__sveltekit_d5cscb = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -53,8 +51,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.12553131.js"),
-						import("./_app/immutable/entry/app.706c3f63.js")
+						import("./_app/immutable/entry/start.bff47e20.js"),
+						import("./_app/immutable/entry/app.593b1e57.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
