deploy: af42e52f93d56d19ce97073700b836f71ba18474

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.8981e8ed.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.68eac764.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.bff47e20.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.9a1a95eb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.8a750992.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.4222442f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.1b659909.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.593b1e57.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.d2bbc37d.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.337ffa20.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.28f4a03b.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.ff365516.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.js.984db11e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.023f2d5d.js"><title>tf2cssplg2</title><!-- HEAD_svelte-6k0x73_START --><!-- HEAD_svelte-6k0x73_END -->
+		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.81703ed2.js"><title>tf2cssplg2</title><!-- HEAD_svelte-6k0x73_START --><!-- HEAD_svelte-6k0x73_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -26,7 +26,7 @@
 
 
 
-<div class="flex flex-row justify-between items-start w-full"><div class="w-4/5 h-[100vh]"><form class="flex flex-col items-center w-full h-full p-6 space-y-4"><h1>dump your console output here</h1>
+<div class="flex flex-row justify-between items-start w-full"><div class="w-4/5 h-[100vh]"><form class="flex flex-col items-center w-full h-full p-6 space-y-4"><h2 class="font-bold">dump your console output here</h2>
     <textarea class="textarea p-3 h-full w-full resize-none font-mono" rows="24" spellcheck="false"></textarea>
     <div class="w-full flex justify-between"><a href="/examples" class="h-fit">See examples</a>
       <button class="btn btn-lg variant-filled-primary" type="submit">Submit</button></div></form></div>
@@ -41,7 +41,7 @@
 			
 			<script>
 				{
-					__sveltekit_d5cscb = {
+					__sveltekit_mjosnu = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -51,8 +51,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.bff47e20.js"),
-						import("./_app/immutable/entry/app.593b1e57.js")
+						import("./_app/immutable/entry/start.9a1a95eb.js"),
+						import("./_app/immutable/entry/app.28f4a03b.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
