--- a/examples.html
+++ b/examples.html
@@ -8,11 +8,11 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.8981e8ed.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.d35a4105.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.bff47e20.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.9a1a95eb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.8a750992.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.4222442f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.1b659909.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.593b1e57.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.d2bbc37d.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.337ffa20.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.28f4a03b.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.ff365516.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.js.984db11e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
@@ -98,7 +98,7 @@
 			
 			<script>
 				{
-					__sveltekit_d5cscb = {
+					__sveltekit_mjosnu = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -108,8 +108,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.bff47e20.js"),
-						import("./_app/immutable/entry/app.593b1e57.js")
+						import("./_app/immutable/entry/start.9a1a95eb.js"),
+						import("./_app/immutable/entry/app.28f4a03b.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
