--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.8981e8ed.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/_page.68eac764.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.9a1a95eb.js">
+		<link href="./_app/immutable/assets/_page.532f7603.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.3df861bc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.8a750992.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.d2bbc37d.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.337ffa20.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.28f4a03b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a2699f35.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.9c7e216b.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.732530bc.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.ff365516.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.js.984db11e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.81703ed2.js"><title>tf2cssplg2</title><!-- HEAD_svelte-6k0x73_START --><!-- HEAD_svelte-6k0x73_END -->
+		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.05902dc6.js"><title>tf2cssplg2</title><!-- HEAD_svelte-6k0x73_START --><!-- HEAD_svelte-6k0x73_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -30,10 +30,10 @@
     <textarea class="textarea p-3 h-full w-full resize-none font-mono" rows="24" spellcheck="false"></textarea>
     <div class="w-full flex justify-between"><a href="/examples" class="h-fit">See examples</a>
       <button class="btn btn-lg variant-filled-primary" type="submit">Submit</button></div></form></div>
-  <div class="table-container"><table class="table table-hover table-compact"><thead><tr><th class="sorted-asc svelte-1p69jcq">Name</th>
-        <th class=" svelte-1p69jcq">Ping</th>
-        <th class=" svelte-1p69jcq">ID3</th>
-        <th class=" svelte-1p69jcq">URL</th></tr></thead>
+  <div class="table-container"><table class="table table-hover table-compact"><thead><tr><th class="sorted-asc svelte-ryaaom">Name</th>
+        <th class=" svelte-ryaaom">Ping</th>
+        <th class=" svelte-ryaaom">ID3</th>
+        <th class=" svelte-ryaaom">URL</th></tr></thead>
     <tbody></tbody></table>
 </div></div>
 
@@ -41,7 +41,7 @@
 			
 			<script>
 				{
-					__sveltekit_mjosnu = {
+					__sveltekit_xme978 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -51,8 +51,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.9a1a95eb.js"),
-						import("./_app/immutable/entry/app.28f4a03b.js")
+						import("./_app/immutable/entry/start.3df861bc.js"),
+						import("./_app/immutable/entry/app.732530bc.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
