--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.8981e8ed.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.532f7603.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.aa1b29d9.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.f88b55d5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.8a750992.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.5ea31921.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.82a10de2.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.a839c003.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.24b74b77.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.a897d3d5.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.7e0e733d.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.ff365516.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.js.984db11e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.5cb86210.js"><title>tf2cssplg2</title><!-- HEAD_svelte-6k0x73_START --><!-- HEAD_svelte-6k0x73_END -->
+		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.94496058.js"><title>tf2cssplg2</title><!-- HEAD_svelte-6k0x73_START --><!-- HEAD_svelte-6k0x73_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -41,7 +41,7 @@
 			
 			<script>
 				{
-					__sveltekit_1uky9w5 = {
+					__sveltekit_l674v3 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -51,8 +51,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.aa1b29d9.js"),
-						import("./_app/immutable/entry/app.a839c003.js")
+						import("./_app/immutable/entry/start.f88b55d5.js"),
+						import("./_app/immutable/entry/app.7e0e733d.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
